--- a/Undercurrent/Undercurrent/Undercurrent.vcxproj.filters
+++ b/Undercurrent/Undercurrent/Undercurrent.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="CmdClient.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="FilterPacket.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Undercurrent.h">
@@ -48,6 +51,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="CmdClient.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FilterPacket.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
