--- a/Undercurrent/Undercurrent/Undercurrent.vcxproj.filters
+++ b/Undercurrent/Undercurrent/Undercurrent.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="FilterPacket.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ProtocolAnalysis.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Undercurrent.h">
@@ -54,6 +57,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="FilterPacket.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ProtocolAnalysis.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
